-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.4, 6.9.1
-
-
ad7a9155c (dev), f632583fb (6.10)
Issue Description
When rendering Japanese text using the Roboto font, unwanted artifacts (extra pixels) appear on the screen (see Screenshot_Android15.png).
This issue does not occur on Android 14 (see Screenshot_Android14.png).
Steps to Reproduce
- Run the attached application on Android 15 (the issue also reproduces on the emulator).
Reproduction Environments
- Qt 6.8.4 + Pixel 7, Android 15 (API 35), x86_64 Emulator
- Qt 6.9.1 + Pixel 7, Android 15 (API 35), x86_64 Emulator
Additional Notes
- This issue was initially reported when using Noto Sans.
- However, the problem also occurs with Roboto, likely because the exact "Noto Sans" font is not bundled with Android by default. Instead, Android includes multiple localized variants such as Noto Sans Adlam, Noto Sans CJK JP, etc.
- As a result, when "Noto Sans" is explicitly specified, the system may fall back to Roboto, which seems to be causing the rendering artifacts.